<resources>
    <string name="app_name">Tracking App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    //login textfield

    <string name="email_text">Email</string>
    <string name="emailhint_text">Enter Your Email</string>
    <string name="namehint_text">Enter Your Name</string>
    <string name="fnamehint_text">Enter Your First Name</string>
    <string name="title_txt">Enter Title</string>
    <string name="desc_txt">Enter Description</string>
    <string name="lnamehint_text">Enter Your Last Name</string>
    <string name="phonehint_text">Enter your Phone number</string>
    <string name="dobhint_text">Enter your DOB</string>
    <string name="submit_txt">Submit</string>

    <string name="password_text">Password</string>
    <string name="passwordhint_text">Enter Your Password</string>
    <string name="login_title">Welcome Back</string>
    <string name="signup_title">Welcome</string>
    <string name="forgotpassword_title">Forgot Password</string>
    <string name="resetpassword_title">Reset Password</string>
    <string name="profile_title">Profile</string>
    <string name="editprofile_title">Edit Profile</string>
    <string name="forgotpassword_text">Forgot Password? Click here </string>
    <string name="login_text">Login</string>
    <string name="reset_text">Reset</string>
    <string name="addtask_text">Add Task</string>
    <string name="recive_link">Didn\'t Receive the link? Click here </string>

    //reset password

    <string name="newpassword_text">New password </string>
    <string name="newpasswordhint_text">Enter a new password </string>
    <string name="reenter_password_text">Re-enter new password </string>
    <string name="confirm_text">Confirm</string>
    <string name="notmatchpassword_msg">Password could not match</string>


    <string-array name="locale_array">
        <item>Select Employee(optional)</item>
        <!--        <item>Dummy data2</item>-->
        <!--        <item>Dummy data3</item>-->
    </string-array>
</resources>